Avances en el capitulo 2, reestructuracion con un capitulo menos

--- a/report/apendices/apendiceB.tex
+++ b/report/apendices/apendiceB.tex
@@ -1,7 +1,7 @@
 % Appendix A
 
 \chapter{Figuras adicionales}
-\label{apendiceA}
+\label{apendiceB}
 \lhead{Apéndice B. \emph{Figuras adicionales}}
 
 \begin{landscape}
@@ -10,6 +10,6 @@
 \includegraphics[width=\textwidth]{figuras/arbolsintaxis.pdf}
 \caption{Árbol sintáctico que construye el \textit{parser} al analizar la
 sentencia $\Phi_{SAT}$. Los nodos terminales se marcan con un óvalo.}
-\label{esquema_herramienta}
+\label{arbolsintactico}
 \end{figure}
 \end{landscape}
