--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -155,3 +155,19 @@
   journal = aij,
   publisher = "Elsevier"
 }
+
+@Misc{rintanen:notes,
+  author = "J. Rintanen", 
+  title = "Introduction to automated planning, course notes",
+  pages = "43--44", 
+  year = "2005",
+  institution = "Albert-Ludwigs-Universität"
+}
+
+@InProceedings{rintanen:m,
+    author = "J. Rintanen",
+    title = "Engineering Efficient Planners with SAT",
+    year = "2012",
+    booktitle = "Proc.\ 20th European Conf.\ on Artificial Intelligence",
+    publisher = "IOS Press"
+}
