--- a/report/capitulos/capitulo3.tex
+++ b/report/capitulos/capitulo3.tex
@@ -1,8 +1,5 @@
-% Chapter 3
+% Chapter 4
 
-\chapter{Optimizaciones a la herramienta}
+\chapter{Traducción de problemas PH}
 \label{Chapter3}
-\lhead{Capítulo 3. \emph{Optimizaciones a la herramienta}}
-
-\section{Conjetura inicial}
-\section{Horizontes para planificadores basados en SAT}
+\lhead{Capítulo 3. \emph{Traducción de problemas PH}}
