--- a/report/capitulos/capitulo4.tex
+++ b/report/capitulos/capitulo4.tex
@@ -1,5 +1,291 @@
-% Chapter 4
-
-\chapter{Traducción de problemas PH}
+\chapter{Experimentos y resultados}
 \label{Chapter4}
-\lhead{Capítulo 4. \emph{Traducción de problemas PH}}
+\lhead{Capítulo 4. \emph{Experimentos y resultados}}
+
+Este capítulo presenta una serie de experimentos realizados para evaluar hasta
+qué punto es práctico resolver problemas NP y PH modelados en lógica y
+traducidos por la herramienta.
+En primer lugar, se justifica la escogencia de un planificador basado en SAT
+para la realización de los experimentos y se presenta una forma de calcular
+cotas inferiores y superiores para acotar la búsqueda de una solución. Luego,
+se explica el protocolo de realización de los experimentos y se describen brevemente 
+los problemas NP y PH que se utilizarán. Finalmente, se discuten los resultados
+obtenidos en estos experimentos.
+
+\section{Escogencia de planificador}
+De acuerdo con \cite{russell:book}, las estrategias más comunes para resolver
+un problema de planificación son la utilización de planificadores basados en
+SAT (SAT-\textit{planners}), la búsqueda heurística y la búsqueda basada en un
+grafo de planificación.
+
+\cite{rintanen:notes} expone que para ciertos dominios es conveniente
+considerar la noción de planes paralelos: planes que permiten la aplicación de
+varias acciones ``a la vez'': si existen $n$ acciones que afectan y dependen de
+condiciones disjuntas, hay $n!$ planes que son equivalentes (i.e., llevan al
+mismo estado) que serían explorados por un planificador serial. Si $n$ es
+grande, esto puede ser combinatoriamente complejo. Por tanto, un planificador
+que tome en cuenta planes paralelos tendría ventajas sobre un planificador
+serial.
+
+Recuerde que en los dominios traducidos por la herramienta propuesta en este
+trabajo, las acciones \texttt{colocar\_verdadera} y \texttt{colocar\_falsa}
+aplicadas a diferentes variables o tuplas son completamente independientes, y
+por tanto paralelizables.
+
+Existen SAT-\textit{planners} que resuelven problemas de
+planificación paralela de manera muy eficiente. Se escogió el planificador del
+estado del arte basado en SAT \texttt{M} \citep{rintanen:m} para realizar los experimentos, 
+debido a su superior desempeño.
+
+\subsection{Ventanas de horizonte}
+
+In the following, we derive tight bounds on the length
+of parallel plans for the resulting problems. These bounds
+are used with SAT-based planner to show that a given
+STRIPS problem has no solution and also to improve the
+performance of the planners.
+
+A horizon window for a STRIPS problem $P$ is an
+interval of the form $[s,f]$ such that $P$ has a
+plan iff it has a plan of length $\ell\in[s,f]$.
+A window is a parallel-horizon window if $\ell$
+refers to the makespan of a parallel plan.
+Horizon windows can be effectively used to prune
+the search space.
+
+The recursive structure of the generated problem
+permits the calculation of non-trivial horizon
+windows and of tight parallel-horizon windows.
+Indeed, since all set operators can be applied
+concurrently, a parallel plan needs at most one
+time step to execute them. The plan also requires
+the operators \fttt{begin-proof} and \fttt{prove-goal}.
+Thus, the parallel-horizon window is $[2,3]$ (the lower
+bound 2 applies when there is a plan that uses no
+set operators) plus the parallel-horizon window
+$\pwin(\psi)$ of the sentence $\psi$;
+parallel-horizon windows are inductively defined by
+\begin{enumerate}[--]
+\item $\pwin(\theta)\doteq [0,0]$ if $\theta$ is a literal,
+\item $\pwin(\wedge_{i=1}^n \theta_i)\doteq 1+\bigvee_{i=1}^n \pwin(\theta_i)$,
+\item $\pwin(\vee_{i=1}^n \theta_i)\doteq 1+\bigwedge_{i=1}^n \pwin(\theta_i)$,
+\item $\pwin((\exists y)\theta(\bar x,y))\doteq 1+\pwin(\theta)$, and
+\item $\pwin((\forall y)\theta(\bar x,y))\doteq \|A\|+\pwin(\theta)$,
+\end{enumerate}
+where $\A$ is the structure associated to the problem,
+and the operations between windows and scalars are
+$[a,b]\vee[a',b']\doteq[\max\{a,a'\},\max\{b,b'\}]$,
+$[a,b]\wedge[a',b']\doteq[\min\{a,a'\},\max\{b,b'\}]$ and
+$c+[a,b]\doteq[c+a,c+b]$.
+SAT, for example, has the window $[\|\A\|+5,\|\A\|+6]$
+which means that the CNF encoded by a structure $\A$
+is satisfiable iff there is a parallel plan of
+makespan $\ell$ such that $\|\A\|+5\leq\ell\leq\|\A\|+6$.
+
+By bounding the upper limit of parallel horizon 
+windows, we obtain the following surprising result.
+
+\begin{theorem}
+Consider a signature $\sigma$, $\Phi\in\SOE(\sigma)$ and
+$\A\in\struc[\sigma]$. Then, to decide $\A\models\Phi$,
+it is enough to consider parallel plans of makespan
+linear on $\|\A\|$ for fixed $\Phi$ but independently
+of the arities in $\sigma$ and $\Phi$.
+More precisely, it is enough to consider plans of makespan
+at most $q(\|\A\|-1)+d+3$ where $q$ is the maximum nesting
+of universal quantifiers in $\psi$, $d$ is the depth of
+$\psi$ and $\psi$ is the FOL part of $\Phi$.
+\end{theorem}
+\begin{proof}
+Let $n=\|\A\|$ and $T$ the parse tree of height $h$ for $\psi$.
+For a maximal branch $b\in T$, let $q_b$ be the number
+of universal quantifiers in $b$, $h_b$ its height, and
+$u(b)$ the upper limit of the parallel horizon window
+along $b$. The upper limit $u(\psi)$ of $\pwin(\psi)$
+is $\max_{b\in T} u(b)$. On the other hand,
+\[ u(b) = q_bn + h_b - q_b = q_b(n-1) + h_b \leq q(n-1) + h. \]
+End with $h=d$ and that $3$ must be added to $u(\psi)$.
+\end{proof}
+
+This bound is tight for SAT.
+The result is surprising because one would expect 
+the need to consider parallel plans of makespan $\O(\|\A\|^k)$
+for some $k$. However, note that a linear makespan
+does not mean a linear number of operators.
+
+\section{Diseño de los experimentos}
+\subsection{Procedimiento}
+
+\subsection{Modelaje de problemas NP}
+
+\subsection{Modelaje de problemas PH}
+
+\section{Resultados en resolución de problemas NP}
+
+\section{Resultados en resolución de problemas PH}
+
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}c}{\footnotesize\textsc{Sat}: $\pwin=[n+5,n+6]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+%                                                             % sample standard deviation
+uf20          &        40/40 &     40 &      0 &       1.7 \\ % 2.0
+uf50          &        40/40 &     40 &      0 &     146.7 \\ % 202.3
+uf75          &        15/40 &     15 &      0 &     362.1 \\ % 568.6
+uuf50         &        40/40 &      0 &     40 &     548.5 \\ % 260.2
+uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
+\midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}l}{\footnotesize\textsc{Clique}: $\pwin=[2n+4, 3n+7]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+%5-3           &        40/40 &     10 &     30 &       0.0 \\ % 0.0
+%5-4           &        40/40 &      0 &     40 &       0.2 \\ % 0.5
+10-3          &        40/40 &     22 &     18 &       1.2 \\ % 0.8
+10-4          &        40/40 &     12 &     28 &       2.2 \\ % 2.3
+10-5          &        40/40 &      1 &     39 &      32.3 \\ % 106.7
+15-3          &        40/40 &     22 &     18 &      10.5 \\ % 8.2
+15-4          &        40/40 &     11 &     29 &      36.6 \\ % 84.5
+15-5          &        39/40 &      4 &     35 &      74.3 \\ % 136.2
+15-6          &        37/40 &      1 &     36 &      79.4 \\ % 128.3
+20-3          &        40/40 &     25 &     15 &      40.2 \\ % 21.6
+20-4          &        40/40 &     17 &     23 &      72.6 \\ % 66.3
+20-5          &        39/40 &     10 &     29 &     159.6 \\ % 252.4
+20-6          &        34/40 &      4 &     30 &     185.2 \\ % 225.2
+25-3          &        40/40 &     30 &     10 &     111.9 \\ % 53.9
+25-4          &        40/40 &     18 &     22 &     231.0 \\ % 236.7
+25-5          &        39/40 &     10 &     29 &     387.5 \\ % 396.6
+25-6          &        36/40 &      8 &     28 &     394.1 \\ % 321.1
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}l}{\footnotesize\textsc{DirectedHamiltonianPath}: $\pwin=[n+3,n+10]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+%5             &        40/40 &     12 &     28 &       0.0 \\ % 0.0
+10            &        40/40 &     15 &     25 &       1.1 \\ % 2.3
+15            &        39/40 &     18 &     21 &      63.7 \\ % 203.3
+20            &        31/40 &     20 &     11 &      70.0 \\ % 127.6
+25            &        29/40 &     20 &      9 &     202.1 \\ % 199.8
+30            &        22/40 &     20 &      2 &     629.1 \\ % 242.2
+\midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}l}{\footnotesize\textsc{3-DimensionalMatching}: $\pwin=[3n+4,3n+6]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+%5             &        40/40 &     19 &     21 &       0.0 \\ % 0.0
+10            &        40/40 &     36 &      4 &       9.6 \\ % 2.8
+15            &        40/40 &     40 &      0 &     251.5 \\ % 65.5
+20            &        13/40 &     13 &      0 &   1,191.0 \\ % 42.1 (avg/std) is over 3 instances !!!
+25            &         0/40 &      0 &      0 &       --- \\ % ---
+\midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}l}{\footnotesize\textsc{3-Colorability}: $\pwin=[2n+4, 2n+7]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+%5             &        40/40 &     37 &      3 &       0.0 \\ % 0.0
+10            &        40/40 &     18 &     22 &       0.1 \\ % 0.1
+15            &        40/40 &     24 &     16 &       0.9 \\ % 0.6
+20            &        40/40 &     12 &     28 &       3.0 \\ % 1.8
+25            &        40/40 &     30 &     10 &       8.9 \\ % 4.7
+30            &        40/40 &      9 &     31 &      20.9 \\ % 12.2
+40            &        40/40 &      4 &     36 &      75.1 \\ % 55.7
+50            &        40/40 &      1 &     39 &     196.7 \\ % 119.2
+\midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}l}{\footnotesize$k$-\textsc{Colorability}: $\pwin=[2n+4,3n+6]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+%5-2           &        40/40 &     20 &     20 &       0.0 \\ % 0.0
+%5-3           &        40/40 &     37 &      3 &       0.0 \\ % 0.0
+%5-4           &        40/40 &     39 &      1 &       0.0 \\ % 0.0
+10-2          &        40/40 &      9 &     31 &       1.9 \\ % 0.5
+10-3          &        40/40 &     18 &     22 &       2.8 \\ % 1.4
+10-4          &        40/40 &     27 &     13 &      11.0 \\ % 23.3
+15-2          &        40/40 &      7 &     33 &      33.5 \\ % 9.2
+15-3          &        40/40 &     16 &     24 &      46.5 \\ % 12.3
+15-4          &        40/40 &     24 &     16 &      91.7 \\ % 113.5
+20-2          &        40/40 &      3 &     37 &     254.9 \\ % 68.2
+20-3          &        40/40 &     12 &     28 &     395.9 \\ % 221.8
+20-4          &        40/40 &     20 &     20 &     497.3 \\ % 178.0
+25-2          &         0/40 &      0 &      0 &       --- \\ % ---
+25-3          &         0/40 &      0 &      0 &       --- \\ % ---
+25-4          &         0/40 &      0 &      0 &       --- \\ % ---
+\midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
+Total         &  1,614/1,920 &    706 &    908 &     180.9 \\ % a rellenar al final
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\onecolumn
