--- a/report/capitulos/conclusiones.tex
+++ b/report/capitulos/conclusiones.tex
@@ -1,5 +1,7 @@
 % Chapter 5
 
 \chapter{Conclusiones y Recomendaciones}
+\label{Capitulo5}
+\lhead{Capítulo 5. \emph{Experimentos y resultados}}
 \section{Aportes realizados}
 \section{Direcciones futuras}
