--- a/report/capitulos/introduccion.tex
+++ b/report/capitulos/introduccion.tex
@@ -108,16 +108,18 @@ introducción a las áreas de planificación automática y complejidad descripti
 En el segundo capítulo se describe el lenguaje lógico diseñado para la
 formulación de problemas a alto nivel, se presenta una reducción base de NP
 lenguaje al lenguaje PDDL y se demuestran ciertas propiedades formales de esta
-traducción. En el capítulo 3 se discuten algunas optimizaciones aplicadas sobre
-la función de reducción que permiten la generación de problemas de
-planificación menos complejos sin alterar las propiedades formales básicas de
-la traducción a NP. El capítulo 4 presenta una extensión de la herramienta que
+traducción. 
+%En el capítulo 3 se discuten algunas optimizaciones aplicadas sobre
+%la función de reducción que permiten la generación de problemas de
+%planificación menos complejos sin alterar las propiedades formales básicas de
+%la traducción a NP. 
+El capítulo 3 presenta una extensión de la herramienta que
 le permite traducir problemas más generales, pertenecientes a la jerarquía
 polinomial.
-El capítulo 5 trata sobre cómo fueron diseñados y llevados a
+El capítulo 4 trata sobre cómo fueron diseñados y llevados a
 cabo experimentos sobre diferentes problemas NP y PH traducidos con la herramienta,
 además de ofrecer una discusión de los resultados obtenidos. Finalmente, el
-capítulo 6 contiene conclusiones, recomendaciones e ideas para trabajos
+capítulo 5 contiene conclusiones, recomendaciones e ideas para trabajos
 futuros.
 
 %2. ACTIVIDADES QUE INVOLUCRA EL PROYECTO: 
