--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -58,7 +58,6 @@
 \newcommand{\struc}{\text{STRUC}}
 \newcommand{\FT}{\ensuremath{\mathfrak{F}}}
 \newcommand{\eq}{\equiv}
-\newcommand{\pwin}{mkspw}
 \renewcommand{\models}{\vDash}
 \newcommand{\domred}{\mathfrak{D}}
 \newcommand{\insred}{\mathfrak{I}}
@@ -131,6 +130,7 @@
 \newcommand{\SAT}{\textsc{Sat}}
 
 \renewcommand{\O}{\ensuremath{\mathcal{O}}}
+\newcommand{\pwin}{long}
 
 
 %! referencias manera estandar
