--- a/report/apendices/apendiceA.tex
+++ b/report/apendices/apendiceA.tex
@@ -1,8 +1,8 @@
 % Appendix A
 
-\chapter{Problemas NP modelados en lógica}
+\chapter{Problemas NP y PH modelados en lógica}
 \label{apendiceA}
-\lhead{Apéndice A. \emph{Problemas NP modelados en lógica}}
+\lhead{Apéndice A. \emph{Problemas NP y PH modelados en lógica}}
 
 \section{SAT}
 \begin{verbatim}
